--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      // Check if browser supports serviceWorker api and register your service worker
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./serviceWorker.js')
+            .then((reg) => { console.log('Registered service worker: ', reg) })
+            .catch((err) => { console.log('Failure registering service worker: ', err) });
+        })
+      }
+    </script>
   </body>
 </html>
