--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A pwa built with Capacitor.js and React"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="A pwa built with Capacitor.js and React" />
+    <link rel="icon" type="image/png" href="./images/logo.png" />
+    <link rel="apple-touch-icon" href="./images/logo.png" />
+    <link rel="manifest" href="./manifest.json" />
     <title>Capacitor PWA App</title>
   </head>
   <body>
